# esp-idf_ble_gamepad_and_ui

./: CMakeLists.txt  README.md  partitions.csv
ESP32-BLE-Gamepad/: BleConnectionStatus.cpp  BleConnectionStatus.h  BleGamepad.cpp  BleGamepadConfiguration.h
components/esp-nimble-cpp/: cmake_install.cmake
html/: index.html
include/: adc.h  gpio.h  http_server.h  soft_access_point.h  softap_sta.h
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  gpio.cpp  http_server.c  idf_component.yml  main.cpp  soft_access_point.c  softap_sta.cpp
