idf_component_register(
    SRCS
        "main.cpp"
        "gpio.cpp"
        "adc.c"
        "http_server.c"
        "soft_access_point.c"

        "../ESP32-BLE-Gamepad/BleConnectionStatus.cpp"
        "../ESP32-BLE-Gamepad/BleGamepad.cpp"
        "../ESP32-BLE-Gamepad/BleGamepadConfiguration.cpp"

    INCLUDE_DIRS
        "."
        "../include"
        "../ESP32-BLE-Gamepad"

    REQUIRES
        arduino
        esp-nimble-cpp
        driver
        nvs_flash
        soc
        hal 
        esp_adc
        lwip
        esp_wifi
        esp_phy
        esp_netif
        esp_event
        esp_coex
        wpa_supplicant
        mbedtls
        console
        esp_pm
        esp_http_server
        esp_lcd
        spiffs
)
